<resources>
    <string name="app_name">WorksWhale</string>

    <string name="empty_name_error">이름을 입력하세요.</string>
    <string name="empty_phone_number_error">전화번호를 입력하세요.</string>
    <string name="empty_email_error">이메일을 입력하세요.</string>
    <string name="invalid_phone_number_error">전화번호는 010으로 시작해야합니다.</string>
    <string name="invalid_email_error">올바른 이메일 형식이 아닙니다.(xxxxx@xxx.xxx)</string>
    <string name="invalid_phone_number_length_error">전화번호를 다시 확인해주세요</string>

    <string name="human_resources_department">인사부</string>
    <string name="public_relations_department">홍보부</string>
    <string name="research_development_department">연구개발부</string>
    <string name="planning_department">기획부</string>
    <string name="accounting_department">회계부</string>
    <string name="sales_department">영업부</string>

    <string name="department_count">(%d)</string>

    <string name="alarm_time_off">OFF</string>
    <string name="alarm_time_five_seconds">5초 뒤</string>
    <string name="alarm_time_five_minutes">5분 뒤</string>
    <string name="alarm_time_ten_minutes">10분 뒤</string>
    <string name="alarm_time_thirty_minutes">30분 뒤</string>

    <string name="alarm_notification_title">연락 알림</string>
    <string name="alarm_notification_content">%s님한테 연락할 시간입니다.</string>

    <string name="notification_channel_id">alarm</string>
    <string name="notification_channel_name">Alarm Channel</string>
    <string name="notification_channel_description">연락할 시간을 알려주는 Notification</string>
    <string name="notification_action_text">앱으로 이동</string>

    <string name="toast_message_make_notification">%1$s님에 대한 연락 알람이 설정되었습니다.</string>

    <string name="quit_app_dialog_message">앱을 종료하시겠습니까?</string>
    <string name="quit_app_dialog_positive_btn">종료</string>
    <string name="quit_app_dialog_negative_btn">취소</string>

    <string name="contact_list_tab">연락처</string>
    <string name="my_page_tab">마이 페이지</string>

    <string name="edit_hint_name">이름</string>
    <string name="edit_hint_phone_number">전화번호</string>
    <string name="edit_hint_department">부서</string>
    <string name="edit_hint_email">이메일</string>
    <string name="edit_hint_memo">메모</string>
    <string name="edit_hint_alarm_setting">알람 설정</string>

    <string name="add_contact_dialog_positive_btn">취소</string>
    <string name="add_contact_dialog_negative_btn">저장</string>

    <string name="edit_profile_dialog_negative_btn">취소</string>
    <string name="edit_profile_dialog_positive_btn">확인</string>

    <string name="name_tab">이름</string>
    <string name="phone_number_tab">번호</string>
    <string name="department_tab">부서</string>
    <string name="email_tab">이메일</string>
    <string name="memo_tab">메모</string>
    <string name="alarm_tab">알람</string>

    <string name="search_query_hint">이름 또는 번호로 검색해주세요</string>
</resources>