<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingEnd="50dp"
    android:paddingStart="50dp"
    android:paddingTop="25dp"
    android:paddingBottom="25dp">

    <ImageView
        android:id="@+id/iv_edit_profile_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_contact_list_circle"
        android:src="@drawable/img_default_profile"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/et_edit_profile_name"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_hint_name"
        android:textSize="18sp"
        android:inputType="text"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_edit_profile_profile" />


    <EditText
        android:id="@+id/et_edit_profile_phone_number"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_hint_phone_number"
        android:inputType="phone"
        android:textSize="18sp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_profile_name"
        android:maxLength="13"/>

    <EditText
        android:id="@+id/et_edit_profile_email"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_hint_email"
        android:textSize="18sp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_profile_phone_number" />

    <ImageView
        android:id="@+id/iv_edit_profile_logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_profile_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_profile_cancel"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_my_page_background"
        android:text="@string/edit_profile_dialog_negative_btn"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_profile_check"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_edit_profile_logo" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_profile_check"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selector_add_contact_add_btn"
        android:text="@string/edit_profile_dialog_positive_btn"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_edit_profile_cancel"
        app:layout_constraintTop_toBottomOf="@id/iv_edit_profile_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>